Disable ControlPanel Horz overflow fix

--- a/src/spartanlync/styles/spl-styles.scss
+++ b/src/spartanlync/styles/spl-styles.scss
@@ -868,7 +868,7 @@
    display: none;
 
    width: 100%;
-   height: 100%;
+   height: 99%;
    opacity: 0;
    transition: opacity 0.6s ease;
    background-color: #000000;
